--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
  </head>
  <body>
-   <script src="main.js"></script>
+   <script src="/main.js/"></script>
  </body>
+
 </html>
